--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "tsx ./node_modules/knex/bin/cli.js",
@@ -13,6 +16,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "dotenv": "^17.2.3",
+    "fastify": "^5.7.4",
+    "knex": "^3.1.0",
+    "pg": "^8.18.0",
+    "zod": "^4.3.6"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^25.2.0",
@@ -22,14 +33,7 @@
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.18"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "dotenv": "^17.2.3",
-    "fastify": "^5.7.4",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
-    "zod": "^4.3.6"
+    "vitest": "^4.0.18",
+    "sqlite3": "^5.1.7"
   }
 }
